<resources>
    <string name="app_name">ZooApp</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_animal">AnimalActivity</string>
    <string name="title_activity_enclos">EnclosActivity</string>
    <string name="title_activity_food">FoodActivity</string>
    <string name="title_activity_ticket">TicketsActivity</string>
    <string name="title_activity_food_detail">FoodDetailActivity</string>
    <string name="title_activity_food_form">FoodFormActivity</string>
    <string name="label_food_name_form">Name of food :</string>
    <string name="label_food_type_form">Type of food :</string>
    <string name="value_food_name_form">Food Name Value :</string>
    <string name="value_food_type_form">Food Type Value</string>
    <string name="food_list_title">FOOD LIST</string>

    <string-array name="food_type_array">
        <item>Animal alive</item>
        <item>Meat</item>
        <item>Grains</item>
        <item>Vegetables</item>
        <item>Vistors food</item>
        <item>Staff food</item>
    </string-array>

</resources>
