<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:fitsSystemWindows="true"
tools:context="zooapp.jmdel.fr.zooapp.FoodUpdateActivity">
    
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:layout_gravity="center_vertical"
            android:title="@string/food_list_title"
            app:popupTheme="@style/AppTheme.PopupOverlay" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="EDIT FOOD"
                android:textSize="25dp"
                android:layout_gravity="center" />

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="?attr/actionBarSize"
    android:scrollbars="vertical">

    <GridLayout
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:useDefaultMargins="false"
        android:columnCount="2">

        <!--Put form controls here-->
        <!-- Name of food-->
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_food_name_form"
            android:textSize="10pt">
        </TextView>
        <TextView
            android:id="@+id/FixedFoodName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10pt">
        </TextView>
        <!-- Spiner Type of food-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_food_type_form"
            android:textSize="10pt">
        </TextView>

        <Spinner
            android:id="@+id/spinnerTypeeFood"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/food_type_array"
            android:prompt="@string/value_food_type_form" />
        <!-- Eater of food-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Food eater :"
            android:textSize="10pt">
        </TextView>

        <EditText
            android:id="@+id/EditTextEater"
            android:layout_height="wrap_content"
            android:hint="value_food_eater_form"
            android:inputType="textPersonName"
            android:layout_width="fill_parent">
        </EditText>
        <!-- Qantity of food-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Food stock :"
            android:textSize="10pt">
        </TextView>

        <EditText
            android:id="@+id/EditDoubleStock"
            android:layout_height="wrap_content"
            android:hint="Stock quatity"
            android:inputType="numberDecimal"
            android:layout_width="fill_parent">
        </EditText>
        <!-- Unity of qty -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Stock unity :"
            android:textSize="10pt">
        </TextView>
        <EditText
            android:id="@+id/EditStockUnit"
            android:layout_height="wrap_content"
            android:hint="for expl : kg, pieces, bottle ..."
            android:inputType="textPersonName"
            android:layout_width="fill_parent">
        </EditText>
    </GridLayout>
</ScrollView>

<android.support.design.widget.FloatingActionButton
    android:id="@+id/update_food_bt"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|end"
    android:layout_margin="8dp"
    android:src="@android:drawable/ic_menu_save" />

</android.support.design.widget.CoordinatorLayout>
